--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "build": "tsc",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon --exec ts-node --files index.ts",
     "test": "mocha --timeout 10000 --exit"
   },
   "author": "Nicole Ang",
@@ -19,10 +19,17 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mocha": "^10.1.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sequelize": "^6.37.7",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.6",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^18.11.3",
-    "chai": "^4.3.6"
+    "chai": "^4.3.6",
+    "ts-node": "^10.9.2"
   }
 }
