--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,11 @@
     "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mantine/core": "^8.2.3",
+    "@mantine/dates": "^8.2.4",
+    "@mantine/form": "^8.2.4",
+    "@mantine/hooks": "^8.2.3",
+    "@mantine/notifications": "^8.2.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.8",
     "@mui/x-date-pickers": "^5.0.3",
@@ -15,6 +20,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.13",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -30,6 +36,9 @@
     "@testing-library/react": "^13.4.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@vitejs/plugin-react": "^4.7.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
     "vite": "^7.0.6"
   }
 }
