--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,17 @@
     "@mantine/notifications": "^8.2.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.8",
-    "@mui/x-date-pickers": "^5.0.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.13",
-    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "dev": "vite",
